--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
         "symfony/flex": "^1.1",
         "symfony/form": "6.0.*",
         "symfony/framework-bundle": "6.0.*",
+        "symfony/mime": "6.0.*",
         "symfony/monolog-bundle": "^3.1",
         "symfony/process": "6.0.*",
         "symfony/property-access": "6.0.*",
