--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "bootstrap": "4.6.0",
         "bootstrap-toggle": "^2.2.2",
         "chart.js": "^3.4.0",
+        "dropzone": "^6.0.0-beta.2",
         "javascript-autocomplete": "^1.0.5",
         "jquery": "^3.6.0",
         "select2": "^4.0.13",
