--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
         "admin-lte": "^3.1",
         "bootstrap": "4.6.0",
         "bootstrap-toggle": "^2.2.2",
-        "chart.js": "^3.4.0",
         "dropzone": "^6.0.0-beta.2",
+        "highcharts": "^9.3.2",
         "javascript-autocomplete": "^1.0.5",
         "jquery": "^3.6.0",
         "select2": "^4.0.13",
@@ -22,5 +22,6 @@
         "dev": "encore dev",
         "watch": "encore dev --watch",
         "build": "encore production --progress"
-    }
+    },
+    "dependencies": {}
 }
