--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
         "add": "^2.0.6",
         "admin-lte": "^3.1",
         "bootstrap": "4.6.0",
+        "bootstrap-colorpicker": "^3.4.0",
         "bootstrap-toggle": "^2.2.2",
         "chart.js": "^3.4.0",
         "dropzone": "^6.0.0-beta.2",
