--- a/composer.json
+++ b/composer.json
@@ -43,7 +43,9 @@
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.3",
-        "phpstan/phpstan": "^0.12.89",
+        "phpstan/extension-installer": "^1.1",
+        "phpstan/phpstan": "^1.4",
+        "phpstan/phpstan-doctrine": "^1.2",
         "phpunit/phpunit": "^9.5",
         "symfony/browser-kit": "^6.0",
         "symfony/css-selector": "^6.0",
